fix align <p> box

--- a/style.css
+++ b/style.css
@@ -235,7 +235,6 @@ button {
 .container-box-text {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   flex-direction: column;
   height: 100%;
 }
